@@ -1,13 +1,13 @@
 Name:           gridftp-hdfs
 %global _name %(tr - _ <<< %{name})
-Version:	1.1
+Version:	1.2
 Release:	1
 Summary:        HDFS DSI plugin for GridFTP
 
 Group:          System Environment/Daemons
 License:        ASL 2.0
 URL:            http://twiki.grid.iu.edu/bin/view/Storage/HadoopInstallation
-Source:	http://www.globus.org/ftppub/gt6/packages/gridftp_hdfs-1.1.tar.gz
+Source:	http://toolkit.globus.org/ftppub/gt6/packages/%{_name}-%{version}.tar.gz
 BuildRoot:      %{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
 
 BuildRequires: java-devel
@@ -94,6 +94,9 @@ fi
 %{_sysconfdir}/init.d/%{name}
 
 %changelog
+* Tue May 19 2015 Globus Toolkit <support@globus.org> - 1.2-1
+- Remove non-standard inline usage
+
 * Mon Apr 20 2015 Globus Toolkit <support@globus.org> - 1.1-2
 - Update to cloudera cdh5 dependency
 
