@@ -1,3 +1,9 @@
+gridftp-hdfs (1.2-1+gt6.@distro@) @distro@; urgency=low
+
+  * Remove non-standard inline usage
+
+ -- Globus Toolkit <support@globus.org>  Tue, 19 May 2015 15:27:13 -0400
+
 gridftp-hdfs (1.1-1+gt6.@distro@) @distro@; urgency=low
 
   * Initial debian packaging
